recipes_app/static/style.css
body {
    font-size: 0.925rem;
    font-family: 'Roboto Mono', monospace;
}

.ck-editor__editable_inline {
    min-height: 400px;
}

#div_id_steps label {
    display: block;
}

#cke_id_steps {
    width: auto !important;
}

#cke_id_ingredients {
    width: auto !important;
}

.django-ckeditor-widget {
    width: 100%;
}


@media screen and (max-width: 1225px) and (min-width: 1045px) {
    .priority-5 {
        display: none;
    }
}

@media screen and (max-width: 1045px) and (min-width: 835px) {
    .priority-5 {
        display: none;
    }

    .priority-4 {
        display: none;
    }
}

@media screen and (max-width: 565px) and (min-width: 300px) {
    .priority-5 {
        display: none;
    }

    .priority-4 {
        display: none;
    }

    .priority-3 {
        display: none;
    }
}

.carousel-caption {
    right: 0;
    left: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.37);
}

@media screen and (max-width: 300px) {
    .priority-5 {
        display: none;
    }

    .priority-4 {
        display: none;
    }

    .priority-3 {
        display: none;
    }

    .priority-2 {
        display: none;
    }

}

.search-input {
    background-color: rgba(56, 56, 56, 0.42);
    color: white;
}

.form-switch {
    margin-top: 0.45rem;
    margin-left: 0!important;
    margin-right: 0!important;
}

.sidebar {
    background-color: #212529;
    border-right: 1px solid;
}

.sidebar-logo, .profile-logo {
    color: white;
}

#hint_id_password1, #hint_id_password2 {
    color: inherit !important;
}

.card {
    background-color: inherit;
}

body.text-light .form-control:focus,
body.text-light .form-control:active,
body.text-light .form-control,
body.text-light .input-group-text,
body.text-light .list-group-item,
body.text-light .modal-content,
body.text-light .recipe-detail {
    background-color: inherit;
    color: inherit;
}

body.bg-dark .modal-content {
    background-color: #212529;
}

body.text-light td svg,
body.text-light .btn-edit-recipe svg {
    stroke: white;
    stroke-width: 1.75;
}

.sidebar .dropdown-toggle {
    color: white;
}

.htmx-indicator {
    display:none;
}
.htmx-request .my-indicator {
    display:inline;
}
.htmx-request.my-indicator {
    display:inline;
}

.nav-link {
    padding: 0.5rem!important;
}

.nice-select {
    width: 100% !important;
    display: block !important;
}

.is-invalid {
    border-color: #dc3545 !important;
}

